# torchfits

./: .gitignore  .gitmodules  .pre-commit-config.yaml  API.md  BENCHMARKS.md  BENCHMARK_AND_FUNCTIONALITY.md  CHANGELOG.md  CMakeLists.txt  COMPREHENSIVE_INVESTIGATION_REPORT.md  CONTRIBUTING.md  FUNCTIONALITY_PARITY_CHECKLIST.md  MAINTENANCE.md  MANIFEST.in  OBJECTIVES.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_VALIDATION.md  PERFORMANCE_OPTIMIZATIONS.md  PLAN.md  PYPI_PUBLICATION_GUIDE.md  README.md  RELEASE_NOTES_v0.1.1.md  bench_extract.py  benchmark.py  build.py  dummy.py  find_duplicates.sh  minimal_table_cutout.py  pixi.toml  pyproject.toml  reproduce_issue.py  setup.py  sitecustomize.py  test_forward_ref.py  test_moc.py  test_output.txt  test_perf.py  test_security_check.py  test_stypes.py  torchfits-0.1.0-hbf21a9e_0.conda  verify_fix.py
.Jules/: palette.md
.github/workflows/: README.md  bench-report.yml  build_wheels.yml  ci.yml  comprehensive_ci.yml  memory_tests.yml  memory_tests.yml.backup
.jules/: bolt.md  palette.md  sentinel.md
benchmark_results/: cpp_backend_results.json
benchmarks/: BENCHMARK_ARCHITECTURE.md  BENCHMARK_SUMMARY.md  README.md  analyze_jsonl.py  bench_all.py  bench_arrow_tables.py  bench_arrow_tables_diverse.py  bench_buffer.py  bench_cache.py  bench_cold_targets.py  bench_competitors.py  bench_compressed.py  bench_contract.py  bench_cpp_backend.py  bench_decompressed_complex_bit_string.py  bench_decompression.py  bench_fast.py  bench_fits_io.py  bench_fitstable_io.py  bench_gpu_memory.py  bench_gpu_transports.py  bench_healpix.py  bench_healpix_advanced.py  bench_legacy_all.py  bench_ml_loader.py  bench_mmap.py  bench_mps.py  bench_parallel.py  bench_pipeline_table_sphere.py  bench_scaled.py  bench_scaled_path.py  bench_sphere_core.py  bench_sphere_geometry.py  bench_sphere_matrix.py  bench_sphere_polygons.py  bench_sphere_sparse.py  bench_sphere_spectral.py  bench_sphere_suite.py  bench_spin_matrix.py  bench_table.py  (+56 more)
benchmarks/baselines/: spin_matrix_extended_baseline.json
benchmarks/replays/: replay_upstream_astropy_healpy.py  replay_upstream_healpy_interp_edges.py  replay_upstream_healpy_spin.py  replay_upstream_spherical_geometry_polygons.py  replay_upstream_test_functions.py  upstream_sources.json
build_debug/cfitsio_build/: cfitsio.pc  cfitsio_export.h
docs/: DESIGN.md  OBJECTIVES.md  OPTMIZE.md  api.md  benchmark_report_2026-06-26.md  benchmarks.md  changelog.md  contributing.md  examples.md  install.md  parity.md  performance_attempts.md  quickstart.md  release.md  roadmap.md  sphere.md  sphere_compat_map.md  upstream_parity_matrix.md
docs/guide/: architecture.md  data_access.md  migration_astropy_fitsio.md
docs/reviews/: release-api-freeze-0.5.0b4.md
examples/: README.md  basic_example.fits  example.py  example_basic_reading.py  example_comprehensive_ml_pipeline.py  example_cutouts.py  example_datacube.py  example_dataset.py  example_frame.py  example_healpix.py  example_image.py  example_image_cube.py  example_image_cutouts.py  example_image_dataset.py  example_image_mef.py  example_mef.py  example_ml_pipeline.py  example_mnist.py  example_phase2_features.py  example_polars.py  example_remote_caching.py  example_sdss_classification.py  example_spectral_sht.py  example_table.py  example_table_interop.py  example_table_recipes.py  example_table_streaming.py  example_tables.py  example_variable_length_arrays.py  example_variable_length_write.py  example_wcs.py  example_wcs_transform.py  test_examples.py
investigation/: .gitignore  README.md
investigation/baseline_results/: README.md
investigation/benchmarks/: benchmark_cfitsio_calls.py  benchmark_cfitsio_simple.py  benchmark_comprehensive.py  benchmark_conversion_path.py  benchmark_final_validation.py  benchmark_real_io.py  benchmark_rigorous.py  benchmark_single_run.py  compare_cfitsio_detailed.py  compare_cfitsio_only.py  compare_fitsio_usage.py  create_test_files.py  profile_component_breakdown.py  profile_detailed.py  profile_for_instruments.py  profile_int16_detailed.py  profile_int16_system.py  profile_python_overhead.py  profile_read.py  profile_return_overhead.py  profile_with_cprofile.py
investigation/docs/: CFITSIO.md  OPTMIZE.md
investigation/reports/: BOTTLENECK_IDENTIFIED.md  DLPACK_FIX_RESULTS.md  FINAL_ANALYSIS.md  FINAL_DIAGNOSIS.md  (+11 more)
scripts/: bootstrap_sphere_bench.py  check_ai_appendix.py  check_duplicate_cpp.py  check_naming.py  gen_parity_matrix.py  gpu-bootstrap.sh  patch_bench_docs.py  render_bench_deficits.py  render_bench_highlights.py  render_bench_iopath_table.py  render_full_benchmarks_table.py  run_exhaustive_bench_and_patch_docs.sh  sync_upstream_sphere_sources.py  update_readme_perf.py
src/torchfits/cpp/: CMakeLists.txt  bindings.cpp  cache.cpp  fits.cpp  fits.h  hardware.cpp  hardware.h  table.cpp  wcs.cpp  wcs.h
src/torchfits/cpp_src/: CMakeLists.txt  bindings.cpp  cache.cpp  cache.h  compression.cpp  compression.h  fast_io.cpp  fits.cpp  fits.h  fits_helpers.h  fits_utils.h  hardware.cpp  hardware.h  healpix.cpp  internal_utils.h  security.h  table.cpp  table.h  torch_compat.h  torchfits_torch.h  types.h  validation.h  wcs.cpp  wcs.h
tests/: README_BENCHMARKS.md  benchmark_runner.py  conftest.py  run_all_tests.py  table_example.fits  test_api.py  test_append_fits_table_metadata.py  test_append_table.py  test_append_table_boolean.py  test_arrow_table_api.py  test_ascii_table.py  test_astro_transforms.py  test_astropy_upstream_smoke.py  test_batch_reads.py  test_buffer.py  test_buffered_fastpath.py  test_byteswap.py  test_cache.py  test_cache_config.py  test_checksum.py  test_complex_header.py  test_comprehensive_benchmark.py  test_compression.py  test_compression_roundtrip.py  test_core.py  test_cutout_performance_api.py  test_dataloader.py  test_dataset_cutouts.py  test_datasets.py  test_dlpack_roundtrip.py  test_docs_integrity.py  test_examples_runner.py  test_fits_reader.py  test_fits_schema.py  test_fitsio_upstream_smoke.py  test_frame.py  test_frame_stypes.py  test_get_header.py  test_hdu.py  test_hdu_file_ops.py  (+82 more)
(+134 files in other folders)
