[build-system]
# Compatible with both pip and pixi-build cmake backend
# When using pixi-build, these are automatically provided but we keep them for pip compatibility
requires = [
    "scikit-build-core>=0.11.6",
    "nanobind>=2.10.2",
    "torch>=2.0.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "torchfits"
version = "0.2.1"
description = "High-performance FITS I/O for PyTorch"
authors = [{ name = "Seb Fabbro", email = "sebfabbro@gmail.com" }]
readme = "README.md"
license = { text = "GPL-2.0-only" }
keywords = ["fits", "astronomy", "pytorch", "tensor", "wcs", "cfitsio", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"

# Core runtime dependencies for the library.
# These are automatically managed by pixi for conda packages
# but needed here for PyPI compatibility
dependencies = [
    "torch>=2.0.0",
    "psutil>=5.0.0",  # For system resource monitoring
    "numpy>=1.20.0",  # Core numerical operations
]

[project.urls]
Homepage = "https://github.com/sfabbro/torchfits"
Repository = "https://github.com/sfabbro/torchfits"

# Defines optional dependencies for different use cases.
# For pixi environments, these are managed separately via features
[project.optional-dependencies]

dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0", 
    "ruff>=0.1.0",
    "mypy>=1.0",
    "ipykernel",
]
bench = [
    "astropy>=5.0",
    "fitsio>=1.1",
    "pandas>=1.0",
    "matplotlib>=3.0",
    "seaborn>=0.11.0",
    "pytest-benchmark>=3.0",
    "psutil>=5.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0", 
    "pytest-benchmark>=3.0",
]
examples = [
    "torchvision>=0.15.0",  # For MNIST example
    "requests>=2.28.0",     # For SDSS download example
    "matplotlib>=3.0",      # For visualization in examples
]

# Configuration for the scikit-build-core build system.
[tool.scikit-build]
# Specifies the directory containing the top-level CMakeLists.txt file.
cmake.source-dir = "src/torchfits/cpp_src"
cmake.build-type = "Release"
cmake.args = [
    "-DTORCHFITS_USE_VENDORED_CFITSIO=ON",
    "-DTORCHFITS_USE_VENDORED_WCSLIB=ON",
    "-DTORCHFITS_NIOBUF=80",
    "-DTORCHFITS_MINDIRECT=16384",
]

# Configures the install directory for the compiled extension.
# This ensures the compiled `cpp.so` or `cpp.pyd` file is placed inside the `torchfits` package.
install.strip = false
wheel.packages = ["src/torchfits"]

# This setting enables CMake's incremental build feature. When you re-run the build,
# CMake and Ninja will automatically detect which C++ files have changed and only
# recompile those, leading to much faster iteration times.
build-dir = "build/{wheel_tag}"




[tool.pytest.ini_options]
markers = [
    "performance: performance-oriented benchmark or stress tests",
    "integration: integration tests across multiple modules",
]
